# librelyrics

./: README.md  pyproject.toml
.github/workflows/: release_to_pypi.yml
librelyrics/: __init__.py  cli.py  config.py  core.py  exceptions.py  logging_config.py  models.py  plugin_manager.py  registry.py  ui.py
librelyrics/modules/: __init__.py  base.py
