[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "librelyrics"
version = "1.0.0"
description = "A modular, plugin-based lyrics fetcher. Fetch synced and unsynced lyrics from various sources via plugins."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "libre-lyrics", email = "libre-lyrics@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["lyrics", "rich-lyrics", "lrc", "synced-lyrics", "music"]
requires-python = ">=3.10"

dependencies = [
    "requests>=2.28.0",
    "tinytag>=1.10.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/libre-lyrics/librelyrics"
Documentation = "https://github.com/libre-lyrics/librelyrics/wiki"
Repository = "https://github.com/libre-lyrics/librelyrics"
Issues = "https://github.com/libre-lyrics/librelyrics/issues"

[project.scripts]
librelyrics = "librelyrics.cli:main"

# Entry points for plugin discovery
# External plugins register via entry points:
#
# [project.entry-points."librelyrics.plugins"]
# myplugin = "librelyrics_myplugin:MyPluginModule"

[tool.setuptools.packages.find]
where = ["."]
include = ["librelyrics*"]

[tool.setuptools.package-data]
librelyrics = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
